# oc-mass-operations

./: .gitignore  LICENSE  README.md  pyproject.toml
.ocmo/handoff-smoke/: manifest-block.yaml  manifest-pass.yaml  prompt.md  run  runner.py
.ocmo/prompts/: report-rewrite.md
examples/: report-rewrite-auto-worktrees.yaml  report-rewrite-multi-agent.yaml  report-rewrite.yaml
examples/prompts/: report-fix.md  report-implement.md  report-review.md  report-rewrite.md
skills/ocmo-plan-grill/: SKILL.md
src/ocmo/: __init__.py  api.py  cli.py  common.py  manifest.py  operation.py  params.py  planner.py  prompting.py  runners.py  skill_install.py  state.py  status.py  workflow_model.py  workflow_run.py  worktrees.py
src/ocmo/resources/commands/: ocmo-operation-statuses.md  ocmo-workflow-statuses.md
src/ocmo/resources/skill/: README.md  SKILL.md
tests/: test_cli.py
