[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ocmo"
version = "0.1.0"
description = "OC Mass Operations queue runner for opencode"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0", "rich>=13.0"]

[project.optional-dependencies]
test = ["coverage>=7.0"]

[project.scripts]
ocmo = "ocmo.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
branch = true
source = ["ocmo"]
omit = ["src/ocmo/__main__.py"]

[tool.coverage.report]
fail_under = 100
show_missing = true
exclude_also = [
  "if __name__ == .__main__.:",
]
